--- a/AnimalStays.Infrastructure/AnimalStays.Infrastructure.csproj
+++ b/AnimalStays.Infrastructure/AnimalStays.Infrastructure.csproj
@@ -9,5 +9,11 @@
   <ItemGroup>
     <ProjectReference Include="..\AnimalStays.Application\AnimalStays.Application.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.2" />
+  </ItemGroup>
 
 </Project>
