Build: JwtSettings section created for config

--- a/AnimalStays.Api/appsettings.Development.json
+++ b/AnimalStays.Api/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Secret": "Extra-supperdupper-long-Super-Secret-Key",
+    "ExpiryMinutes": 60,
+    "Issuer": "AnimalStays",
+    "Audience": "AnimalStays"
   }
 }
