Chore: build stuff

--- a/AnimalStays.Api/AnimalStays.Api.csproj
+++ b/AnimalStays.Api/AnimalStays.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>d56fb96a-5580-4661-bc96-ff4b99a697b8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
